# stark-anatomy

./: Cargo.toml  Makefile
.github/workflows/: test.yml
.trunk/: trunk.yaml
src/: lib.rs
src/field/: types.rs  utils.rs
src/field/types/: base.rs  field.rs  mod.rs
src/iop/types/: merkle.rs  mod.rs  proof_stream.rs
src/polynomial/: types.rs
src/polynomial/types/: multivariate.rs  univariate.rs
