[package]
name = "stark-anat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
ruint = "1.10.1"
rand = "0.8.5"
blake2 = "0.10.6"
serde = "1.0.189"
serde_derive = "1.0.189"
serde-big-array = "0.5.1"
