[package]
name = "stark-anat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
sha2 = "0.10.8"

generic-array = "1.0.0"
ruint = "1.10.1"

serde = "1.0.189"
serde_json = "1.0.108"
serde_derive = "1.0.189"
serde-big-array = "0.5.1"

thiserror = "1.0.50"

[dev-dependencies]
rand = "0.8.5"
